--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ cache/
 node_modules/
 src/types/
 src/web3-types/
-dist/
+../dist/
 yarn-error.log
 .env
 .idea
@@ -11,3 +11,6 @@ yarn-error.log
 refs/
 .vscode
 remix-compiler.config.js
+dist
+out
+deployments
